--- a/project/.env.testing
+++ b/project/.env.testing
@@ -7,11 +7,9 @@ APP_DOMAIN=seimyna.test
 APP_LOG=daily
 APP_SUBDOMAIN=test
 
-LOG_CHANNEL=daily
+DB_CONNECTION=test
 
-DB_CONNECTION=sqlite
-DB_USERNAME=root
-DB_PASSWORD=root
+LOG_CHANNEL=daily
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
