--- a/project/.env.example
+++ b/project/.env.example
@@ -9,6 +9,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=main
+DB_DATABASE=seimyna_test
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USERNAME=root
