--- a/project/.env.testing
+++ b/project/.env.testing
@@ -9,6 +9,7 @@ APP_SUBDOMAIN=test
 
 DB_CONNECTION=test
 DB_DATABASE=seimyna_test
+DB_FAMILY_DATABASE=seimyna_test_family
 
 LOG_CHANNEL=daily
 
@@ -22,12 +23,12 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=sendmail
+MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_USERNAME=b48e3f79d642f1
+MAIL_PASSWORD=d6e97cd0d432f9
+MAIL_ENCRYPTION=tls
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
