--- a/project/.env.testing
+++ b/project/.env.testing
@@ -10,6 +10,10 @@ APP_SUBDOMAIN=test
 DB_CONNECTION=test
 DB_DATABASE=seimyna_test
 DB_FAMILY_DATABASE=seimyna_test_family
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_USERNAME=root
+DB_PASSWORD=
 
 LOG_CHANNEL=daily
 
