--- a/project/.env.testing
+++ b/project/.env.testing
@@ -13,7 +13,7 @@ DB_FAMILY_DATABASE=seimyna_test_family
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 LOG_CHANNEL=daily
 
