--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
     "cordova-plugin-dialogs": "^2.0.2",
     "cordova-plugin-firebase": "^2.0.5",
     "cordova-plugin-firebase-messaging": "^7.0.4",
+    "cordova-plugin-inappbrowser": "^5.0.0",
     "cordova-plugin-statusbar": "^3.0.0",
     "cordova-support-android-plugin": "~2.0.4",
     "cross-env": "^7.0",
@@ -52,6 +53,7 @@
   "dependencies": {
     "before-build-webpack": "^0.2.13",
     "mini-svg-data-uri": "^1.4.4",
+    "moment": "^2.29.4",
     "vue": "^3.2.33",
     "vue-i18n": "^9.1.10",
     "vue-router": "^4.0.15",
@@ -66,7 +68,8 @@
     ],
     "plugins": {
       "cordova-plugin-statusbar": {},
-      "cordova-plugin-dialogs": {}
+      "cordova-plugin-dialogs": {},
+      "cordova-plugin-inappbrowser": {}
     }
   }
 }
